tests/invalid/ref_immutable_to_mutable_param.wio
fn SetValue(target: ref i32) {
    target = 10;
}

fn Entry(args: string[]) -> i32 {
    let value = 0;
    SetValue(ref value);
    return 0;
}
